testsuite/bsc.interra/messages/ETooGeneral/ETooGeneral.bs
package ETooGeneral where

x :: a
x = True

